--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Football_assistant">
-        <activity android:name=".ShowGamesActivity"></activity>
+        <activity android:name=".ShowTeamStatsActivity"></activity>
+        <activity android:name=".ShowGamesActivity" />
         <activity android:name=".LeagueTableActivity" />
         <activity android:name=".TeamStatsActivity" />
         <activity android:name=".NewGameActivity" />
